Fix alignment issue.

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -485,6 +485,7 @@
         margin: auto;
         top: 50%;
         left: 50%;
+        right: unset;
         transform: translate(-50%, -50%);
         background-image: url("img/handbook.png");
         height: 500px;
